[package]
name = "molequla"
version = "0.1.0"
edition = "2021"
description = "The Fifth Element: a GPT organism + distributed cognition metabolism"

[[bin]]
name = "molequla"
path = "molequla.rs"

[features]
default = []
blas = []

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
